src/styles/style.scss
@import "variables";
@import "bootstrap-italia/src/scss/bootstrap-italia";

.logo{
  height: 120px;
  margin: 0 2px;
}

@media (min-width: 60em) {
  .logo{
    height: 180px;
  }
}

html,
body {
  margin: 0;
  width: 100%;
  height: 100%;
  padding: 0;
  background-color: #fff;
}
div {
  box-sizing: border-box;
  width: 100%;
  max-width: 100%;
}


.object-fit-cover {
  object-fit: cover;
}

.it-footer-main {
  background-color: $primary!important;
}
.it-footer-small-prints{
  background-color: $header-slim-bg-color!important;
}

.bg-gray {
  background-color: $hero-bg-color;
  padding-top: 10px;
  padding-bottom: 10px;
}

.contents {
  font-size: 1.2rem;
  line-height: 1.5;
  padding: 1rem;
}
@media (min-width: 50em) {
  .contents {
    padding: 4rem 1rem;
  }
}
.contents img {
  max-width: 100%;
  height: auto;
}
.contents h1,
.contents h2,
.contents h3,
.contents h4,
.contents h5,
.contents h6 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
  font-weight: bold;
}
.contents p {
  margin-bottom: 1rem;
}

.tag {
  display: inline-block;
  padding: 0.5rem 1rem;
  margin-right: 8px;
  border-radius: 4px;
  background-color: $tag-bg-color;
  color: $color-text-secondary;
  font-weight: 600;
}

